HEAD
	+ Bugfix, using standard default smtp banner to avoid breaking
	banner checks. Thanks to ivo@housesbg.com for pointing this
	+ Now event's mail dispatcher uses configured mailname instead of
	non-qualified hostname
	+ Firewall default policy allows mail system from external
	networks because is the expected and usual thing
	+ Bugfix: is not longer allowed a external alias with the same address than
	a existent account
1.4.2
	+ Bugfix, mail to local accounts is delivered correctly, changed
	some parameters to take in account myorigin
	+ Fixed typo in regular expression that checks external accounts names
	+ Plain usernames without mail domain now are allowed for mail
	retrieval from external accounts
	+ Bugfix, hard-coding mailname in main.cf smtp_helo_name because
	$myorigin variable was not correclty resolved
1.4.1
	+ Bugfix, fix incorrect alias dn breaking aliases in postfix
	+ Bugfix, when create a maildir if a leftover maildir already
	  exists now is correctly backuped with the .bak extension
1.3.18
	+ Add widget for external retrieval service (fetchmail)
1.3.17
	+ Added breadcrumbs to external aliases and virtual domain
	  settings models
1.3.16
	+ Make auto creation of e-mail accounts more robust
	+ Bad mailname doesnt disable module activation. Warning message
	added when bad mailname is set. Mailname check in vdomains
1.3.15
	+ Change UI for maximum message limits and expiration limits
	+ Bugfix: The report tables changed its name and they are used by
	  code correctly
	+ Added postmaster option and deprecated bounceReturnAddress
	option
	+ Fixed migration script and ulimited mail message size
	multiplication warning. The error in migration dont corrupted
	configuration but made new installations fail the last migration
	script.
	+ Updated localAttributes in MailUserLdap
	+ Added LOGIN to authorization mechanisms
	+ Using /etc/mailname in hostname and sasl_domain paramteres
	+ Better check of mailname, assure that mailname is correct before