@@ -10,7 +10,7 @@ nobase_Migrations_SCRIPTS = 0001_add_firewall_services.pl 0002_to_new_framework.
         0007_add_fetchmail_ldap.pl \
         0008_update_sql_log_table.pl  0009_add_defaults.pl \
 	0010_fix_smtp_options_sizes.pl \
-	0011_fix_sieve_dir.pl
+	0011_fix_sieve_dir.pl 0012_fix_message_type.pl
 
 
 EXTRA_DIST = $(nobase_Migrations_SCRIPTS)
